--- a/outdoorsy-frontend/src/app/globals.css
+++ b/outdoorsy-frontend/src/app/globals.css
@@ -14,3 +14,17 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+:root {
+    /* variables */
+    /* colors */
+    --grayscale1: #000;
+    --grayscale2: #505050;
+    --grayscale3: #dedede;
+}
