--- a/outdoorsy-frontend/src/features/rentalSearch/components/searchBar/SearchBarStyle.module.css
+++ b/outdoorsy-frontend/src/features/rentalSearch/components/searchBar/SearchBarStyle.module.css
@@ -2,7 +2,7 @@
     font-size: 1.5rem;
     width: 100%;
     padding: 1.5rem 1rem;
-    border: 1px solid #dedede;
+    border: 1px solid var(--grayscale3);
     border-radius: 6px;
     font-weight: 200;
 }
